# ROBOTARM

./: .gitignore  README.md
src/arm_bringup/: CMakeLists.txt  package.xml
src/arm_bringup/config/: controllers.yaml
src/arm_bringup/launch/: bringup.launch.py
src/arm_description/: CMakeLists.txt  package.xml
src/arm_description/urdf/: arm.urdf.xacro
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: controllers.yaml  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml  xl430_arm.ros2_control.xacro  xl430_arm.srdf  xl430_arm.urdf.xacro
src/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
