<?xml version="1.0"?>
<package format="3">
  <name>arm_bringup</name>
  <version>0.0.1</version>
  <description>Dynamixel arm bringup</description>

  <maintainer email="jackson@example.com">Jackson</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
</package>
