<?xml version="1.0"?>
<package format="3">
  <name>arm_description</name>
  <version>0.0.1</version>
  <description>Robot description for XL430 arm</description>

  <maintainer email="jackson@example.com">Jackson</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>ros2_control</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
